--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development && nodemon --exec babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/server.js",
+    "test": "jest",
+    "test-watch": "jest --watchAll"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,10 +14,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ioredis": "^5.2.2",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
     "rate-limiter-flexible": "^2.3.8",
+    "supertest": "^6.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
