--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "node_js_hub",
+  "name": "auth-api",
   "version": "1.0.0",
-  "main": "server.js",
-  "license": "MIT",
+  "description": "",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js",
-    "test": "jest",
-    "test-watch": "jest --watchAll"
+    "start": "NODE_ENV=development && nodemon --exec babel-node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "amqplib": "^0.10.2",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ioredis": "^5.2.2",
-    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
     "rate-limiter-flexible": "^2.3.8",
-    "supertest": "^6.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
