--- a/env.example
+++ b/env.example
@@ -8,3 +8,9 @@ MONGODB_URI=
 # Sendgrid
 DEFAULT_MAIL_SENDER=
 SENDGRID_API_KEY=
+
+# rabbitmq
+AMQP_URL=amqp://guest:guest@rabbitmq:5672
+
+# Cloudinary
+CLOUDINARY_URL=
