--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "auth-api",
+  "name": "node_js_hub",
   "version": "1.0.0",
-  "description": "",
+  "main": "server.js",
+  "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development && nodemon --exec babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/server.js",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
+    "gen-doc": "node swagger.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "amqplib": "^0.10.2",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "cloudinary": "^1.31.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pino": "^8.4.2",
     "rate-limiter-flexible": "^2.3.8",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@babel/node": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "babel-plugin-module-resolver": "^4.1.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "pino-pretty": "^9.1.0"
   }
 }
